<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" 
    android:paddingBottom="10dp"
    android:background="@color/white"
    >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_lightblue"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/textclickguidedialog_title"
        android:textSize="@dimen/bigger"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="@color/text_blue"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:text="@string/textclickguidedialog_content"
        android:textSize="@dimen/big"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="@color/text_blue"
        android:paddingLeft="7dp"
        android:paddingBottom="7dp"
        android:paddingTop="3dp"
        android:text="@string/textclickguidedialog_content1"
        android:textSize="@dimen/big"
        android:visibility="gone"
        />
    
    <FrameLayout 
        android:id="@+id/readed_btn"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:foreground="@drawable/framelayout_selector"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
        >
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:padding="5dp"
	        android:text="@string/textclickguidedialog_konw"
	        android:textSize="@dimen/big"
	        android:background="@color/app_lightblue"
	        />
    </FrameLayout>
	
</LinearLayout>